Project

General

Profile

Actions

Bug #52128

closed

multisite upgrade: error repo entries before upgrade can't be overwritten or removed

Added by Casey Bodley over 2 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
multisite
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

the cls_cmpomap interfaces added for pacific in https://github.com/ceph/ceph/pull/33982 are unable to overwrite or remove error repo entries written before the upgrade, because they had empty values

the result is that 'radosgw-admin sync status' shows these shards as perpetually 'recovering', and it continues to retry their sync even after it succeeds


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #52330: pacific: multisite upgrade: error repo entries before upgrade can't be overwritten or removedResolvedCory SnyderActions
Actions #1

Updated by Casey Bodley over 2 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 42740
Actions #2

Updated by Casey Bodley over 2 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot over 2 years ago

  • Copied to Backport #52330: pacific: multisite upgrade: error repo entries before upgrade can't be overwritten or removed added
Actions #4

Updated by Loïc Dachary over 2 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF